--- a/app/views/home/hello.html.erb
+++ b/app/views/home/hello.html.erb
@@ -1,2 +1,4 @@
-<h1>Home#hello</h1>
-<p>Find me in app/views/home/hello.html.erb</p>
+<h1>Helllo from Go-Food</h1>
+<p>
+  It is now <%= @time %>
+</p>
