--- a/app/views/home/hello.html.erb
+++ b/app/views/home/hello.html.erb
@@ -2,3 +2,17 @@
 <p>
   It is now <%= @time %>
 </p>
+
+<p></p>
+
+<p><%= @users %> -> return berupa array </p> 
+
+<p><%= @users[0] %> -> return berupa object </p> 
+
+<p><%= @users[0].class %> -> class User </p>
+
+<% @users.each do |obj| %>
+  <li><%= obj.username %> - <%= obj.full_name %></li>
+<% end %>
+
+<%=  %>
