--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -3,29 +3,24 @@
 <h1>Foods</h1>
 
 <table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th>Price</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
     <% @foods.each do |food| %>
-      <tr>
-        <td><%= food.name %></td>
-        <td><%= food.description %></td>
-        <td><%= food.image_url %></td>
-        <td><%= food.price %></td>
-        <td><%= link_to 'Show', food %></td>
-        <td><%= link_to 'Edit', edit_food_path(food) %></td>
-        <td><%= link_to 'Destroy', food, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
+        <td>
+          <%= image_tag(food.image_url, class: 'list_image') %>
+        </td>
+        <td class="list_description">
+          <dl>
+            <dt><%= food.name %></dt>
+            <dd><%= truncate(strip_tags(food.description), length: 80) %></dd>
+          </dl>
+        </td>
+        <td class="list_action">
+          <%= link_to 'Show', food %>
+          <%= link_to 'Edit', edit_food_path(food) %>
+          <%= link_to 'Destroy', food, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
-  </tbody>
 </table>
 
 <br>
