--- a/app/assets/stylesheets/buyers.scss
+++ b/app/assets/stylesheets/buyers.scss
@@ -1,7 +1,9 @@
-// Place all the styles related to the Foods controller here.
+// Place all the styles related to the Buyers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.buyers {
+//bisa juga pake @extend .master -> untuk gabungin class
+
+.foods {
   @import 'master'
 }
