--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Store#index</h1>
-<p>Find me in app/views/store/index.html.erb</p>
+<p id="notice"><%= notice %></p>
+<h1>Your Food Catalog</h1>
+
+<% @foods.each do |food| %>
+  <div class="entry">
+    <%= image_tag(food.image_url) %> 
+    <h3><%= food.name %></h3>
+    <%= sanitize(food.description) %>
+    <div class="price_line">
+      <span class="price">
+        <%= number_to_currency(food.price, unit: "Rp ", delimiter: ".", separator: ",") %>    
+      </span>
+      <!-- <span class="price"><%= food.price %></span> -->
+    </div>
+  </div>
+<% end %>
