--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -8,7 +8,8 @@
     <tr>
       <td><%= item.quantity %> ×</td>
       <td><%= item.food.name %></td>
-      <td class="item_price"><%= number_to_currency(item.quantity * item.food.price, unit: "Rp ", delimiter: ".", separator: ",") %></td>
+      <td class="item_price"><%= item.quantity %> * <%= item.food.price %> = <%= number_to_currency(item.total_price(item.quantity, item.food.price), unit: "Rp ", delimiter: ".", separator: ",") %></td>
+      <td class="item_price"><% number_to_currency(item.quantity * item.food.price, unit: "Rp ", delimiter: ".", separator: ",") %></td>
     </tr>
     <% total_price += (item.quantity * item.food.price) %>
   <% end %>
