--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -22,6 +22,12 @@
   </div>
 
   <div class="field">
+    <%= form.label :category %>
+    <%# collection_select( :category, ['Mahal', 'Sedang', 'Murah']) %>
+    <%# collection_select(:post, :category, ['Mahal', 'Sedang', 'Murah'], :id, prompt: true) %>
+  </div>
+
+  <div class="field">
     <%= form.label :image_url %>
     <%= form.text_field :image_url, id: :food_image_url %>
   </div>
