34th commit, on exercise_3, doing some pratices

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -8,15 +8,13 @@
     <tr>
       <td><%= item.quantity %> ×</td>
       <td><%= item.food.name %></td>
-      <td class="item_price"><%= item.quantity %> * <%= item.food.price %> = <%= number_to_currency(items_price = item.total_price(item.quantity, item.food.price), unit: "Rp ", delimiter: ".", separator: ",") %></td>
+      <td class="item_price"><%= item.quantity %> * <%= item.food.price %> = <%= number_to_currency(items_price = item.total_price, unit: "Rp ", delimiter: ".", separator: ",") %></td>
       <!-- <td class="item_price"><%# number_to_currency(item.quantity * item.food.price, unit: "Rp ", delimiter: ".", separator: ",") %></td> -->
     </tr>
     <%# total_price += (item.quantity * item.food.price) %>
-    <% Cart.total_price(items_price) %>
   <% end %>
   <tr class="total_line">
     <td colspan="2">Total</td>
-    <td class="total_cell"><%= number_to_currency(Cart.price, unit: "Rp ", delimiter: ".", separator: ",") %></td>
-    <% Cart.price = 0 %>
+    <td class="total_cell"><%= number_to_currency(@cart.total_price, unit: "Rp ", delimiter: ".", separator: ",") %></td>
   </tr>
 </table>
