--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong>Description:</strong>
+  <%= @food.category.name %>
+</p>
+
+<p>
   <strong>Image url:</strong>
   <%= @food.image_url %>
 </p>
