--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,9 @@
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="#">My Account</a></li>
-          <li><a href="foods">My Orders</a></li>
+          <li><a href="/foods">My Orders</a></li>
+          <li><a href="/categories">Category</a></li>
+          <li><a href="/carts">Carts</a></li>
         </ul>
       </div>
       <div id="main">
