37th commit, on dummy, i don't know but it works

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -6,9 +6,12 @@
 </p>
 
 <p>
-  <strong>Name:</strong>
-  <%= @category %>
+  <strong>Foods:</strong>
+  <% @category.foods.each do |food| %>
+    <%= food.name %>
+  <% end %>
 </p>
+
 
 <%= link_to 'Edit', edit_category_path(@category) %> |
 <%= link_to 'Back', categories_path %>
