--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,23 +1,16 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Category</h1>
-
-<br>
-<p>Category List</p>
+<h1>Categories</h1>
 
 <table>
   <% @categories.each do |category| %>
-    <tr>
+    <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
       <td><%= category.name %></td>
       <td>
-        <%= link_to 'Show', category %>
-        <%= link_to 'Edit', edit_category_path(category) %>
+        <%= link_to 'Show', category %>  
+        <%= link_to 'Edit', edit_category_path(category) %>  
         <%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %>
       </td>
     </tr>
   <% end %>
 </table>
-
-<br>
-
-<%= link_to 'New Category', new_category_path %>
