--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,15 @@
 
   <body class="<%= controller.controller_name %>">
     <div id="banner">
-      <%= image_tag 'Image2.jpg', alt: "Simplified Go Food" %>
+      <%= image_tag 'logo.jpg', alt: "Simplified Go Food" %>
       <span class="title"><%= @page_title %></span>
     </div>
     <div id="columns">
       <div id="side">
+        <div id="cart">
+          <%= render @cart %>
+        </div>
+
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="#">My Account</a></li>
