--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -113,3 +113,29 @@ body, body > p, body > ol, body > ul, body > td {margin: 8px !important}
     display: none;
   }
 }
+
+#columns {
+  #side {
+    padding: 1em 2em;
+    background: #141;
+  }
+
+  form, div {
+    display: inline;
+  }
+
+  input {
+    font-size: small;
+  }
+
+  #cart {
+    font-size: smaller;
+    color: white;
+
+    table {
+      border-top: 1px dotted #595;
+      border-bottom: 1px dotted #595;
+      margin-bottom: 10px;
+    }
+  }
+}
