need lot reworks, before experiment

--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -13,7 +13,7 @@
       </span>
     </div>
     <div class="tags_line">
-      <span class="tags"><%= food.category.name %></span>
+      <span class="tags"><%= food.category.try(:name) %></span>
     </div>
   </div>
 <% end %>
