--- a/app/assets/stylesheets (copy)/application.css
+++ b/app/assets/stylesheets (copy)/application.css
@@ -13,3 +13,28 @@
  *= require_tree .
  *= require_self
  */
+/*
+body, body > p, body > ol, body > ul, body > td {margin: 8px !important}
+
+#banner {
+  position: relative;
+  min-height: 40px;
+  background: #9c9;
+  padding: 10px;
+  border-bottom: 2px solid;
+  font: small-caps 40px/40px "Times New Roman", serif;
+  color: #282;
+  text-align: center;
+
+  img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 60px;
+    width: 192px;
+  }
+}
+
+#notice:empty {
+  display: none;
+}*/
