--- a/app/views/line_items/create.js.erb
+++ b/app/views/line_items/create.js.erb
@@ -1,2 +1,4 @@
 $('#cart').html("<%= j render(@cart) %>")
 //akan mencari object html dengan id cart, kemudian object itu dirubah sesuai dengan partial page class
+
+$('#current_item').css({'background-color':'#88ff88'}).animate({'background-color':'#99ccff'}, 1000)
