51th commit, on exercise_5, order is done with view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,8 @@
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="#">My Account</a></li>
-          <li><a href="/foods">My Orders</a></li>
+          <li><a href="orders">My Order</a></li>
+          <li><a href="/foods">Food List</a></li>
           <li><a href="/categories">Category</a></li>
           <li><a href="/carts">Carts</a></li>
         </ul>
