--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(order) do |f| %>
   <% if order.errors.any? %>
     <div id="error_explanation">
-      <h2><% pluralize(order.errors_count, "error") %></h2>
+      <h2><%= "error" %></h2>
 
       <ul>
         <% order.errors.full_messages.each do |message| %>
