52th commit, after add user model and controller spec for login, add user mode

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -5,6 +5,7 @@
 <%# @orders.to_json %>
 <%# @orders[1].to_json %>
 <%# @orders[1].line_items.to_json %>
+<%# LineItem.all.to_json %>
 
 <table border=1>
   <tr>
