--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,54 +1,23 @@
-<%= form_with(model: food, local: true) do |form| %>
-  <% if food.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(food.errors.count, "error") %> prohibited this food from being saved:</h2>
+  <fieldset>
+    <legend>Enter User Detail</legend>
 
-      <ul>
-      <% food.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+    <div class="field">
+      <%= f.label :username %>
+      <%= f.text_field :username, size: 40 %>
     </div>
-  <% end %>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, id: :food_name %>
-  </div>
+    <div class="field">
+      <%= f.label :password%>
+      <%= f.password_field :password, size: 40 %>
+    </div>
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description, id: :food_description, rows: 10, cols: 60 %>
-  </div>
+    <div class="field">
+      <%= f.label :password_confirmation, 'confirm:' %>
+      <%= f.password_field :password_confirmation, size: 40 %>
+    </div>
 
-  <div class="field">
-    <%= form.label :category %>
-    <% opt = [] %>
-    <%# collection_select( :category, ['Mahal', 'Sedang', 'Murah']) %>
-    <%# collection_select(:post, :category, ['Mahal', 'Sedang', 'Murah'], :id, prompt: true) %>
-    <%# form.text_area :category, id: :food_category %>
-
-    <%# opt = [['Mahal', 1], ['Murah', 'Murah'],['Sedang','Sedang']] %>
-    <% @categories_opt.each do |category| %>
-      <% dat = [] %>
-      <% dat << category.name %>
-      <% dat << category.id.to_i %>
-      <% opt << dat %>
-    <% end %>
-    <%= select(:food, :category_id, options_for_select(opt), id: :food_category  ) %>
-  </div>
-
-  <div class="field">
-    <%= form.label :image_url %>
-    <%= form.text_field :image_url, id: :food_image_url %>
-  </div>
-
-  <div class="field">
-    <%= form.label :price %>
-    <%= form.text_field :price, id: :food_price %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+    <div class="actions">
+      <%= f.submit %>
+    </div>
+  </fieldset>
 <% end %>
