--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Food</h1>
+<h1>New User</h1>
 
-<%= render 'form', food: @food %>
+<%= render 'form', user: @user %>
 
-<%= link_to 'Back', foods_path %>
+<%= link_to 'Back', users_path %>
