--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -16,6 +16,9 @@
     <th>Payment Type</th>
     <th>Total</th>
     <th>Action</th>
+    <th>Voucher</th>
+    <th>Amount</th>
+    <th>Total Bayar</th>
   </tr>
   <% @orders.each do |order| %>
     <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
