--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Foods</h1>
 
-<%# @orders.to_json %>
+<%= @orders.to_json %>
 <%# @orders[1].to_json %>
 <%# @orders[1].line_items.to_json %>
 <%# LineItem.all.to_json %>
@@ -17,15 +17,16 @@
     <th>Total</th>
     <th>Action</th>
     <th>Voucher</th>
-    <th>Amount</th>
+    <th>Unit</th>
+    <th>Discount</th>
     <th>Total Bayar</th>
   </tr>
   <% @orders.each do |order| %>
     <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
       <td><%= order.id %></td>
       <td><%= order.name %></td>
-      <td><%= order.address %></td>
-      <td><%= order.email %></td>
+      <td><%# order.address %></td>
+      <td><%# order.email %></td>
       <td><%= order.payment_type %></td>
       <td><%= order.total_price %></td>
       <td>
@@ -33,6 +34,10 @@
         <%= link_to 'Edit', edit_order_path(order) %>  
         <%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %>
       </td>
+      <td><%= order.voucher.try(:kode) %></td>
+      <td><%= order.voucher.try(:unit) %></td>
+      <td><%= order.voucher.try(:amount) %></td>
+      <td><%= order.total_payment %></td>
     </tr>
   <% end %>
 </table>
