adding voucher on order_spec

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -15,29 +15,29 @@
     <th>E Mail</th>
     <th>Payment Type</th>
     <th>Total</th>
-    <th>Action</th>
     <th>Voucher</th>
     <th>Unit</th>
     <th>Discount</th>
     <th>Total Bayar</th>
+    <th>Action</th>
   </tr>
   <% @orders.each do |order| %>
     <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
       <td><%= order.id %></td>
       <td><%= order.name %></td>
-      <td><%# order.address %></td>
-      <td><%# order.email %></td>
+      <td><%= order.address %></td>
+      <td><%= order.email %></td>
       <td><%= order.payment_type %></td>
-      <td><%= order.total_price %></td>
+      <td><%= order.total_price %></td>    
+      <td><%= order.voucher.try(:kode) %></td>
+      <td><%= order.voucher.try(:unit) %></td>
+      <td><%= order.voucher.try(:amount) %></td>
+      <td><%= order.total_payment %></td>
       <td>
         <%= link_to 'Show', order %>  
         <%= link_to 'Edit', edit_order_path(order) %>  
         <%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %>
       </td>
-      <td><%= order.voucher.try(:kode) %></td>
-      <td><%= order.voucher.try(:unit) %></td>
-      <td><%= order.voucher.try(:amount) %></td>
-      <td><%= order.total_payment %></td>
     </tr>
   <% end %>
 </table>
