checkpoint before add new features

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -48,6 +48,11 @@
     <%= f.text_field :voucher_kode, size: 40 %>
   </div>
 
+  <div class="field">
+    <%= f.label :voucher %>
+    <%= text_field_tag :voucher_kodex %>
+  </div>
+
   <div class="actions">
     <%= f.submit "Place order" %>
   </div>
