all TDD done need bit reworks on controller

--- a/app/views/tags/edit.html.erb
+++ b/app/views/tags/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Food</h1>
+<h1>Editing Category</h1>
 
-<%= render 'form', voucher: @voucher %>
+<%= render 'form', category: @category %>
 
-<%= link_to 'Show', @voucher %> |
-<%= link_to 'Back', vouchers_path %>
+<%= link_to 'Show', @category %> |
+<%= link_to 'Back', categories_path %>
