--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: voucher, local: true) do |form| %>
-  <% if voucher.errors.any? %>
+<%= form_for(category) do |f| %>
+  <% if category.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(voucher.errors.count, "error") %> prohibited this voucher from being saved:</h2>
+      <h2><%= pluralize(category.errors.count, "error") %> prohibited this category from being saved:</h2>
 
       <ul>
-      <% voucher.errors.full_messages.each do |message| %>
+      <% category.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -12,37 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :kode %>
-    <%= form.text_field :kode %>
-  </div>
-
-  <div class="field">
-    <%= form.label :valid_from %>
-    <%= date_select :voucher, :valid_from %>
-  </div>
-
-  <div class="field">
-    <%= form.label :valid_through %>
-    <%= date_select :voucher, :valid_through %>
-  </div>
-
-  <div class="field">
-    <%= form.label :unit %>
-    <% opt = [['percent', 'percent'], ['rupiah', 'rupiah']] %>
-    <%= select(:voucher, :unit, options_for_select(opt), id: :voucher_unit  ) %>
-  </div>
-
-  <div class="field">
-    <%= form.label :amount %>
-    <%= form.text_field :amount %>
-  </div>
-
-  <div class="field">
-    <%= form.label :max_amount %>
-    <%= form.text_field :max_amount %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= f.submit %>
   </div>
 <% end %>
