--- a/app/views/tags/new.html.erb
+++ b/app/views/tags/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Voucher</h1>
+<h1>New Category</h1>
 
-<%= render 'form', voucher: @voucher %>
+<%= render 'form', category: @category %>
 
-<%= link_to 'Back', vouchers_path %>
+<%= link_to 'Back', categories_path %>
