tag view CRUD all done

--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -2,16 +2,16 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @category.name %>
+  <%= @tag.name %>
 </p>
 
 <p>
   <strong>Foods:</strong>
-  <% @category.foods.each do |food| %>
+  <% @tag.foods.each do |food| %>
     <%= food.name %>
   <% end %>
 </p>
 
 
-<%= link_to 'Edit', edit_category_path(@category) %> |
+<%= link_to 'Edit', edit_tag_path(@tag) %> |
 <%= link_to 'Back', categories_path %>
