--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -1,10 +1,11 @@
-<%= form_for(category) do |f| %>
-  <% if category.errors.any? %>
+<%# form_for(tag) do |f| %>
+<%= form_with(model: tag, local: true) do |f| %>
+  <% if tag.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(category.errors.count, "error") %> prohibited this category from being saved:</h2>
+      <h2><%= pluralize(tag.errors.count, "error") %> prohibited this tag from being saved:</h2>
 
       <ul>
-      <% category.errors.full_messages.each do |message| %>
+      <% tag.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
