--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -2,23 +2,25 @@
 
 <h1>Categories</h1>
 <p>
-  <%= @categories[0].foods.to_json %>
+  <%# @tags[0].foods.to_json %>
 </p>
 <p>
-  <%= @categories.find_by(id: 1).to_json %>
+  <%# @tags.find_by(id: 1).to_json %>
 </p>
 <p>
-  <%= @categories.to_json %>
+  <%# @tags.to_json %>
 </p>
 <table>
-  <% @categories.each do |category| %>
+  <% @tags.each do |tag| %>
     <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
-      <td><%= category.name %></td>
+      <td><%= tag.name %></td>
       <td>
-        <%= link_to 'Show', category %>  
-        <%= link_to 'Edit', edit_category_path(category) %>  
-        <%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <%= link_to 'Show', tag %>  
+        <%= link_to 'Edit', edit_tag_path(tag) %>  
+        <%= link_to 'Destroy', tag, method: :delete, data: { confirm: 'Are you sure?' } %>
       </td>
     </tr>
   <% end %>
 </table>
+
+<%= link_to 'New Tag', new_tag_path %>
