--- a/app/views/tags/new.html.erb
+++ b/app/views/tags/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Category</h1>
+<h1>New Tag</h1>
 
-<%= render 'form', category: @category %>
+<%= render 'form', tag: @tag %>
 
-<%= link_to 'Back', categories_path %>
+<%= link_to 'Back', tags_path %>
