tag exercise done

--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -21,21 +21,41 @@
     <%= form.text_area :description, id: :food_description, rows: 10, cols: 60 %>
   </div>
 
-  <div class="field">
-    <%= form.label :category %>
-    <% opt = [] %>
+  <!-- <div class="field"> -->
+    <%# form.label :category %>
+    <%# opt = [] %>
     <%# collection_select( :category, ['Mahal', 'Sedang', 'Murah']) %>
     <%# collection_select(:post, :category, ['Mahal', 'Sedang', 'Murah'], :id, prompt: true) %>
     <%# form.text_area :category, id: :food_category %>
 
     <%# opt = [['Mahal', 1], ['Murah', 'Murah'],['Sedang','Sedang']] %>
-    <% @categories_opt.each do |category| %>
-      <% dat = [] %>
-      <% dat << category.name %>
-      <% dat << category.id.to_i %>
-      <% opt << dat %>
+    <%# @categories_opt.each do |category| %>
+      <%# dat = [] %>
+      <%# dat << category.name %>
+      <%# dat << category.id.to_i %>
+      <%# opt << dat %>
+    <%# end %>
+    <%# select(:food, :category_id, options_for_select(opt), id: :food_category  ) %>
+  <!-- </div> -->
+
+  <div class="field">
+    <%= form.label :category %>
+    <%= form.collection_select :category_id, Category.all, :id, :name do |category| %>
+      <%= category.id %>
+      <%= category.name %>
     <% end %>
-    <%= select(:food, :category_id, options_for_select(opt), id: :food_category  ) %>
+  </div>
+
+  <div class="field">
+    <%= form.label :tag %>
+    <table>
+      <%= form.collection_check_boxes :tag_ids, Tag.all, :id, :name do |tag| %>   
+        <tr>
+          <td><%= tag.label %></td>
+          <td><%= tag.check_box %></td>
+        </tr>        
+      <% end %>
+    </table>
   </div>
 
   <div class="field">
