--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -15,7 +15,12 @@
           <dt><%= food.name %></dt>
           <dd><%= truncate(strip_tags(food.description), length:80) %></dd>
           <dd><%= number_to_currency(food.price, unit: "Rp ", delimiter: ".", separator: ",") %></dd>
-          <dd><span class="tags"><%= food.category.try(:name) %></span></dd>
+          <dd>Category : <span class="tags"><%= food.category.try(:name) %></span></dd>
+          <dd>Tag : 
+          <% food.tags.each do |tag| %>
+            <span class="tags"><%= tag.name %></span>
+          <% end %>
+          </dd>
         </dl>
       </td>
       <td class="list_actions">
