--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -16,12 +16,13 @@
       </span>
     </div>
     <div class="tags_line">
-      Category : <span class="tags"><%= food.category.try(:name) %></span>
+      Category : 
+      <span class="tags"><%= food.category.try(:name) %></span>
     </div>
     <div class="tags_line">
       Tag : 
-          <% food.tags.each do |tag| %>
-            <span class="tags"><%= tag.name %></span>
-          <% end %>
+      <% food.tags.each do |tag| %>
+        <span class="tags"><%= tag.name %></span>
+      <% end %>
     </div>
 <% end %>
