--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,6 +46,7 @@
           <li><a href="/foods">Food List</a></li>
           <li><a href="/categories">Category</a></li>
           <li><a href="/tags">Tag</a></li>
+          <li><a href="/restaurants">Restaurant</a></li>
           <li><a href="/vouchers">Voucher</a></li>
           <li><a href="/carts">Carts</a></li>
         </ul>
