--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -25,5 +25,10 @@
   <%= @food.price %>
 </p>
 
+<p>
+  <strong>Restaurant:</strong>
+  <%= @food.restaurant.try(:name) %>
+</p>
+
 <%= link_to 'Edit', edit_food_path(@food) %> |
 <%= link_to 'Back', foods_path %>
