--- a/app/views/order_mailer/received.html.erb
+++ b/app/views/order_mailer/received.html.erb
@@ -1,6 +1,9 @@
-<h1>Order#received</h1>
+<p>Dear <%= @order.name %></p>
 
-<p>
-  <%= @greeting %>, find me in app/views/order_mailer/received.html.erb
-</p>
+<p>Thank you for your recent Go Food order. You ordered the following items:<p>
+  
+<table>
+  <%= render @order.line_items %>
+</table>
 
+<p>We'll send you a separate e-mail when your order ships.</p>
