--- a/app/views/tags/edit.html.erb
+++ b/app/views/tags/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Category</h1>
 
-<%= render 'form', category: @category %>
+<%= render 'form', tag: @tag %>
 
-<%= link_to 'Show', @category %> |
-<%= link_to 'Back', categories_path %>
+<%= link_to 'Show', @tag %> |
+<%= link_to 'Back', tags_path %>
