minor change on login error after refresh page

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -43,10 +43,10 @@
     <%# select(:order, :voucher_id, options_for_select(opt), id: :order_voucher  ) %>
   <!-- </div> -->
 
-  <div class="field">
-    <%= f.label :voucher %>
-    <%= f.text_field :voucher_kode, size: 40 %>
-  </div>
+  <!-- <div class="field">
+    <%# f.label :voucher %>
+    <%# f.text_field :voucher_kode, size: 40 %>
+  </div> -->
 
   <div class="field">
     <%= f.label :voucher %>
