--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -4,25 +4,30 @@
 <%# Food.all.to_json %>
 <%# Category.all.to_json %>
 
-<% @foods.each do |food| %>
-  <div class='entry'>
-    <%= image_tag(food.image_url) %>
-    <h3><%= food.name %></h3>
-    <p><%= sanitize(food.description) %></p>
-    <div class='price_line'>
-      <span class="price">
-        <%= number_to_currency(food.price, unit: "Rp ", delimiter: ".", separator: ",") %>
-        <%= button_to 'Add to Cart', line_items_path(food_id: food), remote: true %>
-      </span>
+<% Restaurant.all.each do |restaurant| %>
+  <h2 style="background: yellow; padding: 10px 5px; margin-top: 0px"><%= restaurant.name %></h2>
+
+  <% restaurant.foods.each do |food| %>
+    <div class='entry'>
+      <%= image_tag(food.image_url) %>
+      <h3><%= food.name %></h3>
+      <p><%= sanitize(food.description) %></p>
+      <div class='price_line'>
+        <span class="price">
+          <%= number_to_currency(food.price, unit: "Rp ", delimiter: ".", separator: ",") %>
+          <%= button_to 'Add to Cart', line_items_path(food_id: food), remote: true %>
+        </span>
+      </div>
+      <div class="tags_line">
+        Category : 
+        <span class="tags"><%= food.category.try(:name) %></span>
+      </div>
+      <div class="tags_line">
+        Tag : 
+        <% food.tags.each do |tag| %>
+          <span class="tags"><%= tag.name %></span>
+        <% end %>
+      </div>
     </div>
-    <div class="tags_line">
-      Category : 
-      <span class="tags"><%= food.category.try(:name) %></span>
-    </div>
-    <div class="tags_line">
-      Tag : 
-      <% food.tags.each do |tag| %>
-        <span class="tags"><%= tag.name %></span>
-      <% end %>
-    </div>
+  <% end %>
 <% end %>
