--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Foods</h1>
+<h1>My Order</h1>
 
-<%= @orders.to_json %>
+<%# @orders.to_json %>
 <%# @orders[1].to_json %>
 <%# @orders[1].line_items.to_json %>
 <%# LineItem.all.to_json %>
