--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -17,6 +17,24 @@
   <% end %>
 </p>
 
+<p>
+  <strong>Review:</strong>
+  <table border=1>
+    <tr>
+      <th>Name</th>
+      <th>Title</th>
+      <th>Description</th>
+    </tr>
+    <% @restaurant.reviews.each do |reviewable| %>
+      <tr>
+        <td><%= reviewable.name %></td>
+        <td><%= reviewable.title %></td>
+        <td><%= reviewable.description %></td>
+      </tr>
+    <% end %>
+  </table>
+</p>
+
 
 <%= link_to 'Edit', edit_category_path(@restaurant) %> |
 <%= link_to 'Back', restaurants_path %>
