--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,13 +2,13 @@
 
 <h1>Categories</h1>
 <p>
-  <%= @categories[0].foods.to_json %>
+  <%# @categories[0].foods.to_json %>
 </p>
 <p>
-  <%= @categories.find_by(id: 1).to_json %>
+  <%# @categories.find_by(id: 1).to_json %>
 </p>
 <p>
-  <%= @categories.to_json %>
+  <%# @categories.to_json %>
 </p>
 <table>
   <% @categories.each do |category| %>
