--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: review, local: true) do |form| %>
+<%= form_for([@reviewable, @review]) do |form| %>
   <% if review.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(review.errors.count, "error") %> prohibited this review from being saved:</h2>
@@ -14,8 +14,11 @@
   <%# params[:food_id] %>
   <%# params[:restaurant_id] %>
 
+  <%= @reviewable.to_json %>
+  <%= @review.to_json %>
+
   <h2>
-    <%= @reviewable_type.constantize.find_by(id: @reviewable_id).name %>  
+    <%# @reviewable_type.constantize.find_by(id: @reviewable_id).name %>  
   </h2>
 
   <div class="field">
@@ -34,8 +37,8 @@
   </div>
 
   <div>
-    <%= form.hidden_field :reviewable_type, :value => @reviewable_type %>
-    <%= form.hidden_field :reviewable_id, :value => @reviewable_id %>    
+    <%# form.hidden_field :reviewable_type, :value => @reviewable_type %>
+    <%# form.hidden_field :reviewable_id, :value => @reviewable_id %>    
   </div>
 
   <div class="actions">
