checkpoint, all done until reviews, worked

--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -14,8 +14,8 @@
   <%# params[:food_id] %>
   <%# params[:restaurant_id] %>
 
-  <%= @reviewable.to_json %>
-  <%= @review.to_json %>
+  <%# @reviewable.to_json %>
+  <%# @review.to_json %>
 
   <h2>
     <%# @reviewable_type.constantize.find_by(id: @reviewable_id).name %>  
