--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,14 @@
     <div id="columns">
       <div id="side">
 
+        <div id="cart">
+          <% if @cart %>
+            <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+              <%= render @cart %>
+            <% end %>
+          <% end %>
+        </div>
+
         <% if session[:user_id] %>
           <ul>
             <li><%= link_to 'Orders', orders_path %></li>
@@ -31,24 +39,28 @@
           </ul>
         <% end %>
         
-        <div id="cart">
-          <% if @cart %>
-            <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
-              <%= render @cart %>
-            <% end %>
-          <% end %>
-        </div>
+        
 
+        <h4>Menu</h4>     
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="#">My Account</a></li>
-          <li><a href="orders">My Order</a></li>
-          <li><a href="/foods">Food List</a></li>
-          <li><a href="/categories">Category</a></li>
-          <li><a href="/tags">Tag</a></li>
-          <li><a href="/restaurants">Restaurant</a></li>
-          <li><a href="/vouchers">Voucher</a></li>
+          <li><a href="/admin">Admin</a></li>
+        </ul>
+
+        <h4>All Models</h4>
+        <ul>
+          <li><a href="/users">User</a></li>
+          <li><a href="/buyers">Buyer</a></li>
           <li><a href="/carts">Carts</a></li>
+          <li><a href="/categories">Category</a></li>
+          <li><a href="/drinks">Drink</a></li>
+          <li><a href="/foods">Food List</a></li>
+          <li><a href="/orders">Order</a></li>          
+          <li><a href="/restaurants">Restaurant</a></li>
+          <li><a href="/tags">Tag</a></li>
+          <li><a href="/users">User</a></li>
+          <li><a href="/vouchers">Voucher</a></li>
+          
         </ul>
       </div>
       <div id="main">
