--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -1,52 +1,2 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @food.name %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @food.description %>
-</p>
-
-<p>
-  <strong>Category:</strong>
-  <%= @food.category.try(:name) %>
-</p>
-
-<p>
-  <strong>Image url:</strong>
-  <%= @food.image_url %>
-</p>
-
-<p>
-  <strong>Price:</strong>
-  <%= @food.price %>
-</p>
-
-<p>
-  <strong>Restaurant:</strong>
-  <%= @food.restaurant.try(:name) %>
-</p>
-
-<p>
-  <strong>Review:</strong>
-  <table border=1>
-    <tr>
-      <th>Name</th>
-      <th>Title</th>
-      <th>Description</th>
-    </tr>
-    <% @food.reviews.each do |reviewable| %>
-      <tr>
-        <td><%= reviewable.name %></td>
-        <td><%= reviewable.title %></td>
-        <td><%= reviewable.description %></td>
-      </tr>
-    <% end %>
-  </table>
-</p>
-
-<%= link_to 'Edit', edit_food_path(@food) %> |
-<%= link_to 'Back', foods_path %>
+<h1>Show</h1>
+<%= @food.to_json %>
