--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -9,7 +9,7 @@
           <%= form_tag admin_path, :method => 'get' do %>
             <div>
               <label>name :</label>
-              <%= text_field_tag :name, params[:name] %>
+              <%= text_field_tag :food_name, params[:food_name] %>
             </div>
             <div>
               <label>description :</label>
@@ -35,7 +35,7 @@
           <%= form_tag admin_path, :method => 'get' do %>
             <div>
               <label>name :</label>
-              <%= text_field_tag :name, params[:name] %>
+              <%= text_field_tag :order_name, params[:order_name] %>
             </div>
             <div>
               <label>address :</label>
@@ -44,6 +44,15 @@
             <div>
               <label>email :</label>
               <%= text_field_tag :email, params[:email] %>
+            </div>
+            <div>
+              <label>payment type</label>
+              <select name='payment_type'>
+                <option value="">Choose payment type</option>>
+                <option value="0">Cash</option>
+                <option value="1">Go Pay</option>
+                <option value="2">Credit</option>
+              </select>
             </div>
             <div>
               <label>minimum total price :</label>
@@ -58,6 +67,32 @@
           <% end %>
         </div>
       </td>
+
+      <td>
+        <div>
+          <h4>Seach Restaurant</h5>
+          <%= form_tag admin_path, :method => 'get' do %>
+            <div>
+              <label>name :</label>
+              <%= text_field_tag :restaurant_name, params[:restaurant_name] %>
+            </div>
+            <div>
+              <label>address :</label>
+              <%= text_field_tag :restaurant_address, params[:restaurant_address] %>
+            </div>
+            <div>
+              <label>minimum food count :</label>
+              <%= text_field_tag :minimum_food_count, params[:minimum_food_count] %>
+            </div>
+            <div>
+              <label>maximum food count :</label>
+              <%= text_field_tag :maximum_food_count, params[:maximum_food_count] %>
+            </div>
+            <br>
+            <%= button_tag "Search", :name => 'submit', :value => 'restaurant' %>    
+          <% end %>
+        </div>
+      </td>
     </tr>
   </table>
 </div>
@@ -65,11 +100,19 @@
 
 <%# params.to_json %>
 <div style="display: block;">
-  <%= @foods.to_sql if @foods.present? %>
-  <%= @foods.to_json if @foods.present? %>
+  <%# @foods.to_sql if @foods.present? %>
+  <%# @foods.to_json if @foods.present? %>
+  <%= render 'admin/foods' if @foods.present? %>
 </div>
 
 <div style="display: block;">
-  <%= @orders.to_sql if @orders.present? %>
-  <%= @orders.to_json if @orders.present? %>
+  <%# @orders.to_sql if @orders.present? %>
+  <%# @orders.to_json if @orders.present? %>
+  <%= render 'admin/orders' if @orders.present? %>
+</div>
+
+<div style="display: block">
+  <%# @restaurants.to_sql %>
+  <%# @restaurants.to_json %>
+  <%= render 'admin/restaurants' if @restaurants.present? %>
 </div>
