--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -5,7 +5,7 @@
     <tr valign="top">
       <td>
         <div>
-          <h4>Seach Food</h5>
+          <h4>Search Food</h5>
           <%= form_tag admin_path, :method => 'get' do %>
             <div>
               <label>name :</label>
@@ -31,7 +31,7 @@
 
       <td>
         <div>
-          <h4>Seach Order</h5>
+          <h4>Search Order</h5>
           <%= form_tag admin_path, :method => 'get' do %>
             <div>
               <label>name :</label>
@@ -70,7 +70,7 @@
 
       <td>
         <div>
-          <h4>Seach Restaurant</h5>
+          <h4>Search Restaurant</h5>
           <%= form_tag admin_path, :method => 'get' do %>
             <div>
               <label>name :</label>
