--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,16 +14,7 @@
       <span class="title"><%= @page_title %></span>
     </div>
     <div id="columns">
-      <div id="side">
-
-        <div id="cart">
-          <% if @cart %>
-            <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
-              <%= render @cart %>
-            <% end %>
-          <% end %>
-        </div>
-
+      <div id="side" style="width: 150px;">
         <% if session[:user_id] %>
           <ul>
             <li><%= link_to 'Orders', orders_path %></li>
@@ -32,15 +23,12 @@
             <li> </li>
             <li><%= button_to 'Logout', logout_path, method: :delete %></li>
           </ul>
-          
         <% else %>
           <ul>
             <li><%= link_to 'Login', login_path %></li>
           </ul>
         <% end %>
         
-        
-
         <h4>Menu</h4>     
         <ul>
           <li><a href="/">Home</a></li>
@@ -63,9 +51,23 @@
           
         </ul>
       </div>
+
       <div id="main">
         <%= yield %>
       </div>
+
+      <div id="side">
+        <div style="padding: 5px;">
+          <div id="cart">
+            <% if @cart %>
+              <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+                <%= render @cart %>
+              <% end %>
+            <% end %>
+          </div>  
+        </div>      
+      </div>
+      
     </div>
   </body>
 </html>
