--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -45,12 +45,20 @@ body, body > p, body > ol, body > ul, body > td {margin: 5px !important}
       li {
         list-style: none;
         background-color: #0099e6;
-        padding: 3px 4px;
+        padding: 1px;
 
-        a {
+        a:link, a:visited {
+          background-color: #0099e6;
+          color: white;
+          padding: 2px;
+          width: 235px;
+          text-align: left;
+          text-decoration: none;
+          display: inline-block;
+        }
 
-          color: #ffffff;
-          font-size: small;
+        a:hover, a:active {
+          background-color: red;
         }
       }
     }
@@ -63,9 +71,11 @@ p, div.tags_line {
   margin-bottom: 0.8em;
 }
 
-.tags {
+.tags-strip {
   background-color: LightGrey;
-  font-size: 10px;
+  border-radius: 5px;
+  padding: 3px 10px;
+  font-size: 12px;
 }
 
 @media all and (max-width: 800px) {
@@ -133,4 +143,13 @@ p, div.tags_line {
   .list_line_odd {
     background: #b7cfe8;
   }
+}
+
+.linker a.linker:hover {
+  background-color: black;
+  color: white;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
 }
