--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -25,12 +25,12 @@
       </div>
       <div class="tags_line">
         Category : 
-        <span class="tags"><%= food.category.try(:name) %></span>
+        <span class="tags-strip"><%= food.category.try(:name) %></span>
       </div>
       <div class="tags_line">
         Tag : 
         <% food.tags.each do |tag| %>
-          <span class="tags"><%= tag.name %></span>
+          <span class="tags-strip"><%= tag.name %></span>
         <% end %>
       </div>
     </div>
