--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -1,2 +1,54 @@
+<p id="notice"><%= notice %></p>
+
 <h1>Show</h1>
-<%= @food.to_json %>
+<%# @food.to_json %>
+
+<p>
+  <strong>Name:</strong>
+  <%= @food.name %>
+</p>
+
+<p>
+  <strong>description :</strong>
+  <%= @food.description %>
+</p>
+
+<p>
+  <strong>price :</strong>
+  <%= @food.price %>
+</p>
+
+<p>
+  <strong>category :</strong>
+  <%= @food.category.name %>
+</p>
+
+<p>
+  <strong>Tags :</strong>
+  <% @food.tags.each do |tag| %>
+    <%= tag.name %>
+  <% end %>
+  <%# @food.tags.to_json %>
+</p>
+
+<p>
+  <strong>Review :</strong>
+  <table border=1>
+    <tr>
+      <th>Name</th>
+      <th>Title</th>
+      <th>Description</th>
+    </tr>
+    <% @food.reviews.each do |reviewable| %>
+      <tr>
+        <td><%= reviewable.name %></td>
+        <td><%= reviewable.title %></td>
+        <td><%= reviewable.description %></td>
+      </tr>
+    <% end %>
+  </table>
+</p>
+
+
+<%= link_to 'Edit', edit_food_path(@food) %> |
+<%= link_to 'Back', foods_path %>
