--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -2,8 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-@import "store.scss";
+// @import "store.scss";
 
-.categories {
-  @extend .store;
-}
+// .categories {
+//   @extend .store;
+// }
