add partial view on restaurant#show

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -35,6 +35,9 @@
   </table>
 </p>
 
+<%= render 'admin/foods' %>
+<%# @foods.to_json %>
+
 
 <%= link_to 'Edit', edit_category_path(@restaurant) %> |
 <%= link_to 'Back', restaurants_path %>
