fixing some views

--- a/app/views/admin/_foods.html.erb
+++ b/app/views/admin/_foods.html.erb
@@ -4,7 +4,7 @@
 
 <%# Food.all.to_json %>
 
-<table>
+<table width="100%">
   <% @foods.each do |food| %>
     <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
       <td>
