--- a/app/views/admin/_restaurants.html.erb
+++ b/app/views/admin/_restaurants.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Restaurants</h1>
-<table>
+<table width="100%">
   <tr>
     <th>Name</th>
     <th>Address</th>
