--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,9 +1,9 @@
 <h1>Admin Index</h1>
 
 <div style="display: block;">
-  <table>
+  <table width="100%">
     <tr valign="top">
-      <td>
+      <td width="33%">
         <div>
           <h4>Search Food</h5>
           <%= form_tag admin_path, :method => 'get' do %>
@@ -29,7 +29,7 @@
         </div>
       </td>
 
-      <td>
+      <td width="33%">
         <div>
           <h4>Search Order</h5>
           <%= form_tag admin_path, :method => 'get' do %>
@@ -68,7 +68,7 @@
         </div>
       </td>
 
-      <td>
+      <td width="33%">
         <div>
           <h4>Search Restaurant</h5>
           <%= form_tag admin_path, :method => 'get' do %>
